# seeder-ai-platform

./: LICENSE  README.md
phase1/: .gitignore  README.md
phase1/backend/: .env.template  Dockerfile  pyproject.toml  requirements.txt
phase1/backend/alembic/: env.py
phase1/backend/app/: config.py  database.py  main.py
phase1/backend/app/api/: admin.py  auth.py  chats.py  connectors.py  models.py  ws.py
phase1/backend/app/core/: crypto.py  deps.py  ldap_auth.py  model_routing.py  security.py
phase1/backend/app/models/: __init__.py  audit_log.py  branch.py  chat.py  chat_archive.py  connector.py  message.py  role.py  user.py
phase1/backend/app/schemas/: connector.py
phase1/backend/app/services/: audit.py
phase1/database/: schema.sql
phase1/docker-compose/bose01/: .env.template  docker-compose.yml
phase1/docker-compose/bose01/litellm/: config.yml
phase1/docker-compose/dirac02/: .env.template  docker-compose.yml
phase1/docker-compose/feynman/: .env.template  docker-compose.yml
phase1/docker-compose/keepalived/: schrodinger01.conf  schrodinger02.conf
phase1/docker-compose/schrodinger01/: .env.template  docker-compose.yml
phase1/docker-compose/schrodinger02/: .env.template  docker-compose.yml
phase1/docker-compose/traefik/: traefik.yml
phase1/docker-compose/traefik/dynamic/: services.yml
phase1/frontend/: Dockerfile  middleware.ts  package.json  tsconfig.json
phase1/frontend/app/: layout.tsx
phase1/frontend/app/chat/: page.tsx
phase1/frontend/app/connectors/: page.tsx
phase1/frontend/lib/: api.ts  auth.ts  ws.ts
(+1 files in other folders)
