[tool.poetry]
name = "ai-platform-backend"
version = "0.1.0"
description = "AI Platform backend - FastAPI + LDAP auth + LiteLLM routing"
authors = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.13.3"
ldap3 = "^2.9.1"
pyjwt = "^2.9.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.12"
redis = "^5.2.0"
celery = "^5.4.0"
httpx = "^0.27.2"
cryptography = "^43.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
